--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>microservicecloud-provider-dept-hystrix-8001</module>
         <module>microservicecloud-custumer-hystrix-dashboard</module>
         <module>microservicecloud-zuul-getway-9527</module>
+        <module>microservicecloud-config-3344</module>
     </modules>
     <packaging>pom</packaging>
 
